# END-TO-END-DATA-SCIENCE-PROJECT

./: .gitignore  LICENSE  README.md  application.py  pyproject.toml  render.yaml  requirements.txt  setup.py
artifacts/: model.pkl  preprocessor.pkl  test.csv  train.csv
customer_churn_prediction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: EDA.ipynb  Exercise.ipynb  pipe.pkl
predictions/: prediction.csv
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/pipelines/: prediction_pipeline.py  training_pipeline.py
templates/: index.html  result.html
