[project]
name = "customer_churn_prediction"
version = "0.1.0"
description = "Predict customer churn or not on bank dataset."
authors = [
  { name = "bhumil chauhan", email = "bhumilchauhan1914@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# List your required dependencies here
dependencies = [
  "flask",
  "numpy",
  "pandas",
  "scikit-learn",     # remove or add as needed

]

[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]